# mimuw

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
sem1/wpf/: README.md
sem1/wpf/abrams/random/: longtail_hedgehog.ml  odd_sum.ml
sem1/wpf/laby/arytmetyka/: arytmetyka.ml  arytmetyka.mli
sem1/wpf/laby/przelewanka/: przelewanka.ml  przelewanka.mli
sem1/wpf/laby/topol/: pMap.ml  pMap.mli  topol.ml  topol.mli
sem1/wpf/random/: Sereja_and_Suffixes.ml  coloring_a_tree.ml  cormen.ml  cutting.ml  fence.ml  nikita_and_string.ml
sem2/ipp/abrams/: README.md
sem2/ipp/abrams/duze/: CMakeLists.txt  MainPage.dox  map.sh
sem2/ipp/abrams/duze/src/: Doxyfile  Makefile  bitset.c  citiesAndRoads.h  hashmap.c  hashmap.h  list.h  parser.c  parser.h  randomIdGenerator.c  randomIdGenerator.h  string.c
sem2/ipp/duze/: Doxyfile.in
sem2/ipp/duze/src/: bitset.h  citiesAndRoads.c  list.c  map.c  map.h  map_main.c  route.c  route.h  string.h
sem2/po/: README.md
sem3/asd/: README.md
sem3/asd/playground/: podciagi-rosnace.cpp  roznica.cpp  roznica2.cpp  skierowanie.cpp  skojarzenia.cpp  trojki.cpp  zolnierze.cpp
sem3/bd/: README.md
sem3/bd/abrams/: README.md
sem3/jnp1/abrams/: README.md
sem3/jnp1/fibin/: README.md
sem3/jnp1/fibo/: Fibo.cc  Fibo.h
sem3/jnp1/playlist/: MetadataResolver.cc  OddEvenMode.h  Playlist.cc  ROT13Decrypter.cc  ShuffleMode.cc  ShuffleMode.h  Song.cc
sem3/jnp1/poset/: poset.cc  poset.h
sem3/jnp1/slownik/: insertion_ordered_map.h
sem3/pw/abrams/: README.md
sem3/pw/abrams/asynchronous-c/: CMakeLists.txt  future.c  macierz.c  silnia.c  threadpool.c  threadpool.h
sem3/pw/abrams/asynchronous-c/test/: macierz.sh.in
sem3/pw/abrams/asynchronous-c/test/dane/: resstud4.txt  resstud7.txt  stud3.txt  stud5.txt  stud6.txt
sem3/pw/abrams/laby/lab10/: CMakeLists.txt  bariera.c  err.c  exchange.c  more_info.c  signal_mask.c
sem3/pw/abrams/laby/lab13/: CMakeLists.txt  log.h  mutex.cpp
sem3/pw/abrams/laby/lab14/: CMakeLists.txt  dekker.cpp  lockfree-stack.cpp
sem3/pw/abrams/laby/lab8/: CMakeLists.txt  child-pipe.c  myPipe.c  parent-dup.c  parent-pipe.c
sem3/pw/abrams/laby/lab9/: CMakeLists.txt  err.c  primes.c  producer-consumer.c
sem3/pw/asynchronous-c/: future.h
sem3/pw/laby/lab11/: CMakeLists.txt  err.h  send_message.c  send_message_protected.c  unnamed_memory.c
sem3/rpis/: README.md
sem4/io/abrams/: README.md
sem4/io/egzamin/: ma406058.tex
sem4/io/projekt/: README.md
sem4/jaio/: README.md
sem4/jaio/abrams/: README.md
sem4/jnp2/abrams/: README.md
sem4/jnp2/zadanie1/: README.md
sem4/sik/: README.md
sem4/sik/abrams/radio/: CMakeLists.txt  Dockerfile  Makefile  buildAndRunDocker.sh
sem4/sik/abrams/radio/base-docker/: Dockerfile  buildBaseDocker.sh
sem4/sik/abrams/radio/src/main/cc/proxy/: radioProxy.cc
sem4/sik/abrams/radio/src/main/cc/proxy/audio-stream-sinks/: audioStreamSinkFactory.h  outputAudioStreamSink.cc  udpAudioStreamSink.cc
sem4/sik/abrams/radio/src/main/cc/proxy/program-arguments-resolvers/: defaultRadioProxyArgumentsResolver.cc  defaultRadioProxyArgumentsResolver.h  udpProxyArgumentsResolver.cc  udpProxyArgumentsResolver.h
sem4/sik/abrams/radio/src/main/cc/proxy/radio-client-communication-parser/: radioClientCommunicationParser.cc
sem4/sik/abrams/radio/src/main/cc/proxy/response-resolver/: responseResolver.cc  responseResolver.h
sem4/sik/abrams/radio/src/main/cc/proxy/tcp-client/: tcpClient.h
sem4/sik/abrams/radio/src/main/cc/proxy/udp-client/: udpClient.h  udpClientsStorage.cc  udpClientsStorage.h
sem4/sik/abrams/radio/src/main/cc/utils/: programUsagePrinter.h
sem4/sik/abrams/radio/src/test/bash/: defaultRadioProxyArgumentsResolverInvalidTest.sh
sem4/sik/abrams/radio/src/test/cc/: defaultRadioProxyArgumentsResolverTest.cc  radioClientCommunicationParserTest.cc  udpClientsStorageTest.cc  udpProxyArgumentsResolverTest.cc
sem4/sik/abrams/radio/src/test/cc/default-radio-proxy-arguments-resolver-tests/: defaultRadioProxyArgumentsResolverNoHostTest.cc  defaultRadioProxyArgumentsResolverNoPortTest.cc  defaultRadioProxyArgumentsResolverTimeout0Test.cc
sem4/sik/abrams/test-http/solve/: CMakeLists.txt  dockerTestsEntrypoint.sh  runDockerTests.sh
sem4/sik/abrams/test-http/solve/docker-test/: makefile  runTests.sh
sem4/sik/abrams/test-http/solve/docker-test/src/test/bash/: program_arguments_validation_test.sh
sem4/sik/abrams/test-http/solve/solve/src/main/c/: address_resolver.c  address_resolver.h  buffered_reader.c  file_reader.c  file_reader.h  logger.h  program_arguments_validator.h  tcp_client.c  testhttp_raw.c
sem4/sik/abrams/test-http/solve/solve/src/test/c/: buffered_reader_test.c  file_reader_test.c  response_resolver_test.c  tcp_client_test.c
sem4/sik/radio/: buildAndRunTests.sh
sem4/so/abrams/: README.md
sem4/www/abrams/: README.md
sem4/www/projekt1/: package-lock.json  tsconfig.json
sem4/www/projekt2/: createDb.ts  tslint.json
sem5/bsk/abrams/: README.md
sem5/bsk/abrams/zadanie3/: CMakeLists.txt
sem5/bsk/abrams/zadanie3/docker/base/: Dockerfile  buildBaseImage.sh
sem5/bsk/abrams/zadanie3/src/: commands_to_handle.h
sem5/bsk/abrams/zadanie3/src/example/: example_function.h
sem5/bsk/abrams/zadanie3/src/impl/: classification_resolver.c
sem5/bsk/abrams/zadanie3/src/template/: main.c  safe_memory.c
sem5/bsk/abrams/zadanie3/testdata/klasyfikacja/hipoteka/: kredyt10  kredyt8  kredyt9
sem5/bsk/abrams/zadanie3/testdata/klasyfikacja/krotkoterminowe/: kredyt1  kredyt2
sem5/bsk/abrams/zadanie3/testdata/klasyfikacja/slabe/: kredyt5  kredyt6
sem5/bsk/abrams/zadanie3/testdata/kredyty/: kredyt10  kredyt2  kredyt4  kredyt7  kredyt8
sem5/bsk/zadanie1/: Dockerfile  test.sh
sem5/bsk/zadanie2/: run.sh
sem5/bsk/zadanie3/: Dockerfile  entrypoint.sh  runOnDocker.sh
sem5/bsk/zadanie6/: README.md
sem5/jnp3/: README.md
sem5/jnp3/projekt/: README.md
sem5/mn/: README.md
sem5/semwer/: README.md
sem6/jpp/abrams/: README.md
sem6/jpp/prolog/: ma406058.pl
sem6/sus/: README.md
sem6/sus/bigtask1/: Dockerfile  README.md
sem6/wbo/: README.md
(+943 files in other folders)
